--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <p>"Aplico técnicas avançadas, automatizo tarefas e levo minha produtividade ao próximo nível!"</p>
                 </div>
                 <div class="conhecimento">
-                    <img src="img/imagem2.jpg" alt="Foto do Canva">
+                    <img src="img/voce-sabe-como-escolher-a-localizacao-exata-para-cameras-de-seguranca.webp" alt="Foto do Canva">
                     <p><strong>em cameras e alarmes</strong></p>
                     <p>"Tenho experiência e facilidade sobre essa profissão, proporcionando o melhor ao cliente"</p>
                 </div>
